# cli-session-hub-viewer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs
.cargo/: config.toml
assets/: bundle.css
assets/css/: bundle.css  main.css
assets/css/accessibility/: _focus.css  _reduced-motion.css  _screen-reader.css
assets/css/animations/: _animations.css
assets/css/responsive/: _base.css  _grids.css
assets/css/settings/: _theme-dark-golden.css  _theme-dark-pistachio.css  _theme-dark.css  _theme-pistachio.css
assets/js/: theme-toggle.js
public/: index.html
scripts/: build-css.sh
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/components/: ai_tool_selector.rs  button.rs  card.rs  chat_input.rs  chat_messages.rs  claude_viewer.rs  cli_selector.rs  common.rs  delete_button.rs  image_upload.rs  message_input.rs  message_item.rs  mod.rs  permission_dialog.rs  plan_mode_dialog.rs  search_bar.rs  theme_selector.rs  theme_toggle.rs
src/app/layouts/: global_sidebar.rs  mod.rs  navbar.rs
src/app/pages/: chat.rs  claude_routes.rs  mod.rs
src/cli/: mod.rs  traits.rs
src/cli/claude/: detection.rs  executor.rs  mod.rs  session_manager.rs
src/cli/gemini/: detection.rs  executor.rs  mod.rs
src/cli/generators/: auth.rs  component.rs  controller.rs  mod.rs  model.rs  page.rs  scaffold.rs
src/cli/opencode/: detection.rs  executor.rs  mod.rs
src/config/: mod.rs
src/domain/models/: ai_execution.rs  claude_sdk.rs  image.rs  message.rs  mod.rs  project.rs  search.rs  session.rs
src/domain/services/: claude_process.rs  gemini_bridge.rs  mod.rs  opencode_bridge.rs  opencode_parser.rs
src/handlers/: abort.rs  chat.rs  chat_proxy.rs  conversation.rs  histories.rs  mod.rs  projects.rs  sse.rs
src/history/: discovery.rs  file_utils.rs  grouping.rs  mod.rs  parser.rs  path_utils.rs  timestamp_restore.rs  types.rs
src/history/parsers/: claude.rs  gemini.rs  mod.rs  opencode.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: mod.rs  sse.rs  upload.rs
src/infrastructure/database/: connection.rs  importer.rs  mod.rs  schema.rs
src/infrastructure/database/repositories/: conversation_repo.rs  message_repo.rs  mod.rs  project_repo.rs
src/infrastructure/storage/: database.rs  migrations.rs  mod.rs  redis.rs  sql.rs
src/server_fns/: mod.rs
src/shared/: constants.rs  errors.rs  logging.rs  mod.rs  server_fns.rs
src/shared/hooks/: api.rs  mod.rs  use_abort_controller.rs  use_chat_state.rs  use_image_upload.rs  use_permissions.rs  use_stream_parser.rs  use_theme.rs
src/shared/services/: api_service.rs  mod.rs
src/shared/state/: mod.rs
src/shared/utils/: mod.rs  stream_parser.rs
