[package]
name = "cli-session-hub-viewer"
version = "0.1.0"
edition = "2021"

# ============================================
# SHARED DEPENDENCIES (WASM + Server compatible)
# ============================================
[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async (futures is WASM-compatible)
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hashing (for Gemini path decoding)
sha2 = "0.10"

# Logging (core only - subscriber is server-only)
tracing = "0.1"

# Date/Time (with WASM support)
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Dioxus - fullstack unifié
dioxus = { version = "0.7", features = ["fullstack", "router"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "Storage",
    "MediaQueryList",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    # Image upload features
    "FormData",
    "File",
    "FileList",
    "Blob",
    "Url",
    "console"
] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
reqwasm = "0.5"

# Keyboard types (re-exported by dioxus but needed for explicit import)
keyboard-types = "0.7"

# Utilities (WASM-compatible)
base64 = "0.22"
regex = "1.10"
pulldown-cmark = "0.12"
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
urlencoding = "2.1"

# Cache (WASM-compatible)
dashmap = "6.1"
once_cell = "1.20"

# ============================================
# WASM-ONLY DEPENDENCIES
# ============================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# ============================================
# SERVER-ONLY DEPENDENCIES (NOT WASM compatible)
# ============================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Async runtime (tokio doesn't compile for WASM)
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Logging subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
which = "7.0"

# Web framework (Axum is server-only)
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }

# HTTP client (native reqwest - for server)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
surrealdb = { version = "2.1", features = ["kv-rocksdb"] }

# File system (native only)
walkdir = "2"
glob = "0.3"
notify = "8.2"
dirs = "5.0"

# Image processing (native only)
image = "0.25"

# Dioxus CLI config (server-only)
dioxus-cli-config = "0.7"

# ============================================
# BUILD DEPENDENCIES
# ============================================
[build-dependencies]
lightningcss = "1.0.0-alpha.68"

# ============================================
# FEATURES
# ============================================
[features]
default = ["fullstack"]
fullstack = ["dioxus/fullstack"]
server = ["dioxus/server"]
web = ["dioxus/web"]

# ============================================
# BINARIES
# ============================================
[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

# ============================================
# PROFILES
# ============================================
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
